--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-377u2ltk.us.auth0.com",
+    "Audience": "https://www.blazingportfolio.com"
+  }
 }
