Added api auth with JWT.

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "niff02ce-0053-4tit-1998-31a7d18czebd",
+    "Issuer": "https://localhost:7007/",
+    "Audience": "https://localhost:7007/"
+  }
 }
