--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjXWRgJMFPU4",
-    "Issuer": "https://localhost:7007/",
-    "Audience": "https://localhost:7007/"
+    "Key": "hbBb7kiryI2NJyhVDimRdm3ikmUZE1QfOPdZqrML",
+    "Issuer": "https://localhost:7007",
+    "Audience": "https://localhost:7007"
   }
 }
