Updated implementation of SQLtie db in minimal API.

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./Data/AppDB.db"
+    "DefaultConnection": "Data Source=../Infrastructure/Data/AppDB.db"
   }
 }
