--- a/src/WASM/WASM.csproj
+++ b/src/WASM/WASM.csproj
@@ -19,10 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazored.TextEditor" Version="1.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.2" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.0.6" />
+    <PackageReference Include="Syncfusion.Blazor" Version="19.4.0.53" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="19.4.0.53" />
   </ItemGroup>
 
   <ItemGroup>
