Added Jwt Auth and secured api endpoints.

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "huynguyen.com",
+    "Audience": "huynguyen.com",
+    "Key": "ijurkbdlhmklqacwqzdxmkkhvqowlyqa"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=../Infrastructure/Data/AppDB.db"
