Securing the admin pages.

--- a/src/WASM/WASM.csproj
+++ b/src/WASM/WASM.csproj
@@ -19,11 +19,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.2" PrivateAssets="all" />
-    <PackageReference Include="MudBlazor" Version="6.0.6" />
-    <PackageReference Include="Syncfusion.Blazor" Version="19.4.0.53" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="19.4.0.53" />
+    <PackageReference Include="MudBlazor" Version="6.0.7" />
+    <PackageReference Include="Syncfusion.Blazor" Version="19.4.0.55" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="19.4.0.55" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
   </ItemGroup>
 
   <ItemGroup>
