--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Issuer": "huynguyen.com",
+    "Audience": "huynguyen.com",
+    "Key": "ijurkbdlhmklqacwqzdxmkkhvqowlyqa"
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=../Infrastructure/Data/AppDB.db"
   }
 }
