--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -12,6 +12,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../Infrastructure/Data/AppDB.db"
+    "DefaultConnection": "Data Source=./Data/AppDB.db"
   }
 }
