Display current directory.

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 //git credentialsId: 'Git_SSH', url: 'git@github.com:HuyNguyen260398/BlazingPortfolio.git', branch: 'feature/ci_cd_with_jenkins'
-                bat 'pwd'
+                pwd()
             }
         }
         stage('Restore') {
