Change single quote to double quotes.

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,39 +1,39 @@
 pipeline {
     agent {
         node {
-            label 'test'
+            label "test"
         }
     }
     environment {
-        dotnet = 'C:\\Program Files\\dotnet\\dotnet.exe'
+        dotnet = "C:\\Program Files\\dotnet\\dotnet.exe"
     }
     stages {
-        stage('Checkout') {
+        stage("Checkout") {
             steps {
-                //git credentialsId: 'Git_SSH', url: 'git@github.com:HuyNguyen260398/BlazingPortfolio.git', branch: 'feature/ci_cd_with_jenkins'
+                //git credentialsId: "Git_SSH", url: "git@github.com:HuyNguyen260398/BlazingPortfolio.git", branch: "feature/ci_cd_with_jenkins"
                 echo "${pwd()}"
             }
         }
-        stage('Restore') {
+        stage("Restore") {
             steps {
-                // bat 'dotnet restore --configfile Nuget.Config'
-                echo 'Restore'
+                // bat "dotnet restore --configfile Nuget.Config"
+                echo "Restore"
             }
         }
-        stage('Test') {
+        stage("Test") {
             steps {
-                echo 'Test'
+                echo "Test"
             }
         }
-        stage('Build') {
+        stage("Build") {
             steps {
-                // bat 'dotnet build --configuration Release'
-                echo 'Build'
+                // bat "dotnet build --configuration Release"
+                echo "Build"
             }
         }
-        stage('Dockerize') {
+        stage("Dockerize") {
             steps {
-                echo 'Dockerize'
+                echo "Dockerize"
             }
         }
     }
