Remove Dockerfile and add Clean Ws stage.

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -33,5 +33,10 @@ pipeline {
                 echo "Dockerize"
             }
         }
+        stage("Clean WS") {
+            steps {
+                clearWs()
+            }
+        }
     }
 }
