--- a/JenkinsFile
+++ b/JenkinsFile
@@ -35,7 +35,7 @@ pipeline {
         }
         stage("Clean WS") {
             steps {
-                clearWs()
+                cleanWs()
             }
         }
     }
