Testing build image stage.

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -31,7 +31,7 @@ pipeline {
         stage("Build Image") {
             steps {
                 echo "Dockerize"
-                pwd()
+                echo "${pwd()}"
             }
         }
         stage("Clean WS") {
