--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,6 +6,9 @@ pipeline {
     }
     environment {
         dotnet = "C:\\Program Files\\dotnet\\dotnet.exe"
+        dockerhub_repo = "huynguyen260398/blazing-portfolio"
+        dockerhub_credentials = "DockerHub_Credentials"
+        docker_image = ""
     }
     stages {
         stage("Restore") {
@@ -30,8 +33,9 @@ pipeline {
         }
         stage("Build Image") {
             steps {
-                echo "Dockerize"
-                echo "${pwd()}"
+                script {
+                    docker_image = docker.build("test_imge", "-f src/api/Dockerfile .")
+                }
             }
         }
         stage("Clean WS") {
