--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,47 +6,46 @@ pipeline {
     }
     environment {
         dotnet = "C:\\Program Files\\dotnet\\dotnet.exe"
-        dockerhub_repo = "huynguyen260398/blazing-portfolio"
+        api_dockerhub_repo = "huynguyen260398/blazing-portfolio-api"
+        wasm_dockerhub_repo = "huynguyen260398/blazing-portfolio-wasm"
         dockerhub_credentials = "DockerHub_Credentials"
         api_image = ""
         wasm_image = ""
     }
     stages {
-        stage("Restore") {
+        stage("Restore Packages") {
             steps {
                 bat "dotnet restore"
             }
         }
-        stage("Clean") {
-            steps {
-                bat "dotnet clean"
-            }
-        }
-        stage("Test") {
+        stage("Test Sources") {
             steps {
                 echo "Test"
             }
         }
-        stage("Build") {
+        stage("Build Sources") {
             steps {
                 bat "dotnet build"
             }
         }
-        stage("Build API Image") {
+        stage("Build Images") {
             steps {
                 script {
-                    api_image = docker.build("api_imge", "-f src/API/Dockerfile .")
+                    api_image = docker.build("${api_dockerhub_repo}:1.${BUILD_NUMBER}", "-f src/API/Dockerfile .")
+                    wasm_image = docker.build("${wasm_dockerhub_repo}:1.${BUILD_NUMBER}", "-f src/WASM/Dockerfile .")
                 }
             }
         }
-        stage("Build WASM Image") {
+        stage("Deploy Images") {
             steps {
                 script {
-                    wasm_image = docker.build("wasm_imge", "-f src/WASM/Dockerfile .")
+                    docker.withRegistry("", dockerhub_credentials)
+                    api_image.push()
+                    wasm_image.push()
                 }
             }
         }
-        stage("Clean WS") {
+        stage("Clean Workspace") {
             steps {
                 cleanWs()
             }
