--- a/JenkinsFile
+++ b/JenkinsFile
@@ -31,6 +31,11 @@ pipeline {
                 bat "dotnet build"
             }
         }
+        stage("Archive Sources") {
+            steps {
+                archiveArtifacts artifacts: '**/bin/'
+            }
+        }
         stage("Build Images") {
             steps {
                 script {
