--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -13,5 +13,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=./Data/AppDB.db"
+  },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "BlazingPortfolioDb"
   }
 }
