Add credentials in mongo connection string.

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -15,7 +15,7 @@
     "DefaultConnection": "Data Source=./Data/AppDB.db"
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://user:password@localhost:27017",
     "DatabaseName": "BlazingPortfolioDb"
   }
 }
