--- a/JenkinsFile
+++ b/JenkinsFile
@@ -88,7 +88,7 @@ pipeline {
         //     emailext attachLog: true, body: 'Build', recipientProviders: [buildUser()], subject: "'Build Finished'", to: 'huynguyen260398@live.com'
         // }
         success {
-            emailext 
+            emailext (
                 attachLog: true, 
                 subject: "SUCCESSFUL: Job '${JOB_NAME} [${BUILD_NUMBER}]'", 
                 to: 'huynguyen260398@live.com', 
@@ -97,9 +97,10 @@ pipeline {
                     <p>SUCCESSFUL: Job '${JOB_NAME} [${BUILD_NUMBER}]':</p>
                     <p>Check console output at &QUOT;<a href='${BUILD_URL}'>${JOB_NAME} [${BUILD_NUMBER}]</a>&QUOT;</p>
                 """
+            )
         }
         failure {
-            emailext 
+            emailext (
                 attachLog: true, 
                 subject: "FAILED: Job '${JOB_NAME} [${BUILD_NUMBER}]'", 
                 to: 'huynguyen260398@live.com', 
@@ -108,6 +109,7 @@ pipeline {
                     <p>FAILED: Job '${JOB_NAME} [${BUILD_NUMBER}]':</p>
                     <p>Check console output at &QUOT;<a href='${BUILD_URL}'>${JOB_NAME} [${BUILD_NUMBER}]</a>&QUOT;</p>
                 """
+            )
         }
         // unstable {
         //     emailext attachLog: true, body: 'Test', recipientProviders: [buildUser()], subject: 'Build Unstable', to: 'huynguyen260398@live.com'
